--- a/views/index.html
+++ b/views/index.html
@@ -54,10 +54,9 @@
       <canvas class="mycanvas" id="9" width="10" height="10"></canvas>
       <canvas class="mycanvas" id="0" width="10" height="10"></canvas>
     </div>
-    <button type="button" id="write">Write in Canvas</button>
-    <button type="button" id="get">Get Datasets</button>
-    <button type="button" id="saveDataSets">Save Datasets</button>
-    <button type="button" id="save">Save Images</button>
+    <button type="button" id="write">Write in canvas</button>
+    <button type="button" id="data">Get datasets</button>
+    <button type="button" id="save">Save data</button><a download="info.txt" id="downloadlink" style="display: none;">Download</a>
     <script src="../dist/main.js"></script>
   </body>
 </html>
