--- a/views/index.pug
+++ b/views/index.pug
@@ -18,8 +18,8 @@ html(lang='en')
     //- var min = ['a','b','c','d', 'e' , 'f' , 'g' , 'h' , 'i', 'j' , 'k' , 'l' , 'm' , 'n' , 'o' , 'p' , 'q' , 'r' , 's' , 't' , 'u' , 'v' , 'w' , 'x' , 'y' , 'z' ];
     //- var num = [ '1' , '2' , '3' , '4' , '5' , '6' , '7' , '8' , '9' , '0' ];
     //- var min = ['v','l','6','5','i'];
-    - var min = ['c','2','g','p','0',];
-    //- var min = ['h','a','e','j','g','o','b','8','4','r'];
+    //- var min = ['c','2','g','p','0',];
+    - var min = ['h','a','e','j','g','o','b','8','4','r'];
     #text
       each val in min
         canvas(id=val, class='mycanvas' width='10' height='10')
